--- a/src/app/Utils/global.css
+++ b/src/app/Utils/global.css
@@ -5,7 +5,7 @@ body,
   margin: 0;
   padding: 0;
   background: #121212;
-  color: var(--color-text);
+  color: #f5f5f5;
   font-family: "Inter Variable", "Roboto Variable", sans-serif;
   justify-content: center;
   align-items: center;
